Fix: core `UserInfo` wrap children in inline element

--- a/src/modules/core/components/UserInfo/UserInfo.css
+++ b/src/modules/core/components/UserInfo/UserInfo.css
@@ -13,3 +13,7 @@
 .walletAddress {
   color: var(--grey-5);
 }
+
+.content {
+  display: inline-block;
+}
